audio-preview: Fix help messages in some locales

Call setlocale() first thing in the main() function

https://bugzilla.gnome.org/show_bug.cgi?id=760434