src/totem-audio-preview.c
@@ -163,6 +163,7 @@ int main (int argc, char **argv)
 	GMainLoop *loop;
 	GstElement *play;
 
+	setlocale (LC_ALL, "");
 	bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
 	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
 	textdomain (GETTEXT_PACKAGE);
